ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0, 4.0.29, 5.2.1, 4.4.13, 5.0.7, 4.2.20, 5.2.2
    • Affects Version/s: 5.3.0, 4.0.28, 4.2.17, 4.4.12, 5.0.7, 5.2.2
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.2, v5.0, v4.4, v4.2, v4.0
    • 151
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      For the lookup stage described in steps to reproduce (see comment below), different results are obtained based on whether or not pipeline optimization is enabled.

            Assignee:
            Alya Berciu
            Reporter:
            Alya Berciu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: