SERVER-63141 Ensure stages without dependency tracking are not cached in $lookup