src/mongo/db/pipeline/document_source_sequential_document_cache.cpp
@@ -118,13 +118,14 @@ Pipeline::SourceContainer::iterator DocumentSourceSequentialDocumentCache::doOpt
     DepsTracker deps(DepsTracker::kNoMetadata);
 
     // Iterate through the pipeline stages until we find one which cannot be cached.
-    // A stage cannot be cached if it either: 1. depends on a variable defined in this scope, or
-    // 2. generates random numbers.
+    // A stage cannot be cached if it either:
+    //  1. does not support dependency tracking, and may thus require the full object and metadata.
+    //  2. depends on a variable defined in this scope, or
+    //  3. generates random numbers.
     DocumentSource* lastPtr = nullptr;
     for (; prefixSplit != container->end(); ++prefixSplit) {
-        (*prefixSplit)->getDependencies(&deps);
-
-        if (deps.hasVariableReferenceTo(varIDs) || deps.needRandomGenerator) {
+        if (((*prefixSplit)->getDependencies(&deps) == DepsTracker::State::NOT_SUPPORTED) ||
+            deps.hasVariableReferenceTo(varIDs) || deps.needRandomGenerator) {
             break;
         }
 
